/*
 * $Id: ChangeLog,v 1.852 2003/03/18 15:02:34 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2003-03-18 21:32 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/regex.c
    ! HB_RegexSplit(), in case that the split token is not present
      in the string, returns an array of one item (the whole string).

  * tests/regex.prg
    + Added a test to demonstrate this feature.


2003-03-18 16:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  + source/rtl/hbreadini.prg
    + Added function HB_ReadIni( cFileSpec ) --> aaIniParsed

     This small procedure reads a .ini file into an associative array in
     the standard .ini format:
        ; A line starting with a ';' is a comment
        # Also, a '#' marks a comment up to the end of the line
        [NewSection]
        Variable = Value
        OtherVariable: Value

     You can pass a list of "potential" .ini files in a ';' separated path;
     the first readable file will be loaded.

     On error, the function returns NIL. On success, you will have an associative
     array of this form:

     { 'MAIN' => { 'Key1' => 'Val1', ... ,'KeyN' => 'ValN'},
       'Section1' => { 'Key1' => 'Val1', ... ,'KeyN' => 'ValN'},
       ...
       'SectionN' => { 'Key1' => 'Val1', ... ,'KeyN' => 'ValN'}
     }

     Main is the default section (variables that are declared without a section).

  * makefile.bc
  * makefile.vc
  * source/rtl/Makefile
    + Added compilation of hbreadini.prg

  + tests/parseini.ini
  + tests/parseini.prg
    + Test to demonstrate the woriking of ReadIni()

2003-03-18 12:42 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/regex.c
    % Optimization for non-group aware scans ( has/like operators
      and RegexSplit). Using "1" as maximum group matches, that makes