@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.852 2003/03/18 15:02:34 jonnymind Exp $
+ * $Id: ChangeLog,v 1.853 2003/03/18 20:29:55 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,15 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2003-03-18 14:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/classes.c
+    * Minor bug fixed.
+
+  * include/classex.ch
+    * Reverted recent incorrect change of Aug.
+
+  * source/rtl/terror.prg
+    * Default Severety to ES_ERROR in ErrorNew(...)
 
 2003-03-18 21:32 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/rtl/regex.c
